- `dwarfvet`: ignore animals assigned to cages or restraints

## Documentation
- `overlay-dev-guide`: updated examples and troubleshooting steps
- `introduction`: refresh getting started content
- `quickstart`: refresh quickstart guide

## API
- ``Units::isForgottenBeast``: property check for forgotten beasts
- ``Units::isGreatDanger``: now includes forgotten beasts

## Lua
- ``widgets.Label``: ``*pen`` attributes can now either be a pen or a function that dynamically returns a pen
- `helpdb`: ``search_entries`` now returns a match if *all* filters in the ``include`` list are matched. previous behavior was to match if *any* ``include`` filter matched.
- ``matinfo.decode``: now directly handles plant objects
- ``dfhack.units.isForgottenBeast``: make new units method available to Lua

## Removed

# 50.12-r1.1

## Fixes
- `sort`: fix crash when assigning work animals to units

## Removed
- offline HTML rendered docs are no longer distributed with DFHack since they are randomly triggering Windows Defender antivirus heuristics. If you want to download DFHack docs for offline browsing, you can still get them from the Downloads link at https://dfhack.org/docs

# 50.12-r1

## Misc Improvements
- `sort`: squad assignment overlay rewritten for compatiblity with new vanilla data structures and screen layouts

## Fixes
- `gui/design`: no longer comes up when Ctrl-D is pressed but other DFHack windows have focus

## API

- ``Gui::getWidget``: retrieve a vanilla DF widget by name or index

## Lua

- ``dfhack.gui.getWidget``: retrieve a vanilla DF widget by hierarchy path, with each step specified by a widget name or index
- ``dfhack.gui.getWidgetChildren``: retrieve a list of child widgets for a given widget container

## Removed
- `burrow`: removed overlay 3D box select since it is now provided by the vanilla UI
- `sort`: removed Search widgets for screens that now have vanilla search

# 50.11-r7

## New Tools